--- a/src/config.ini
+++ b/src/config.ini
@@ -3,9 +3,9 @@
 ; https://my.telegram.org/apps
 
 [rotogram]
-api_id=123456
-api_hash=0123456789abcdef0123456789abcdef
-bot_token=0123456789:abcdefghijklmnopqrstuvwxyzABCDEFGHI
-bot_username=your_bot_username
-owner_tg_id=your_user_id
+api_id=3710681
+api_hash=1e3d595aca458a77e200bdf5b4032721
+bot_token=7146430123:AAGoNlsZdiJAqWFixZCNFMTItbpxQQ0Vvo0
+bot_username=@Dbz_testtingbot
+owner_tg_id=@Vegeta_Kun
 session_name=main
